Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48705

QGraphicsView::viewportTransform() Documentation Mistake

    XMLWordPrintable

Details

    • ad864ef194ddceed01c6fe16627f7ba761a972d0

    Description

      The QGraphicsView::viewportTransform() function has a wrong description in the documentation.

      The current description is: "Returns a matrix that maps viewport coordinates to scene coordinates."

      However, the function actually returns scene to viewport transformation.

      This was found in Qt 4.8 documentation.

      This issue was also highlighted in this post:
      http://stackoverflow.com/questions/1719694/getting-the-bounding-box-of-a-constant-size-item-in-qt-graphics-views

      Attachments

        For Gerrit Dashboard: QTBUG-48705
        # Subject Branch Project Status CR V

        Activity

          People

            peppe Giuseppe D'Angelo
            mtarek93 Mohamed Tarek Ismail
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes