QGraphicsView: clarify documentation for viewportTransform

d->matrix holds the scene->viewport transform, not vice versa.

Change-Id: I997cbdfbf519f39f242cd0dbbd00621e59ec9307
Task-number: QTBUG-48705
Reviewed-by: Andreas Aardal Hanssen <andreas@hanssen.name>